test/libsolidity/syntaxTests/inheritance/final_modifier/final_library.sol
library L final {
    function f() public {}
}
// ----
// TypeError: (0-46): Library cannot be declared final.